--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
-DB_URL = mongodb+srv://chaurasiyareeta81:woV6TRsQnvkeNjFN@cluster0.0c2bm.mongodb.net/
+DB_URL = mongodb+srv://chaurasiyareeta81:U@Wvv9JwL4#ZD-z@cluster0.0c2bm.mongodb.net/
 PORT = 3000
 ENC_KEY = rent123
